# services/disclosure_anchor/contracts/filing_api.openapi.yaml
@@ -146,6 +146,11 @@ components:
             type: string
           - type: 'null'
           title: Announcement Date
+        applicability:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Applicability
         artifact_locator:
           anyOf:
           - additionalProperties: true
@@ -204,6 +209,11 @@ components:
         order_index:
           title: Order Index
           type: integer
+        page_no:
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Page No
         parent_ref:
           title: Parent Ref
           type: string
@@ -293,6 +303,8 @@ components:
       - content_hash
       - structure_hash
       - quality_status
+      - applicability
+      - page_no
       - artifact_locator
       - created_at
       - contract_version
@@ -847,6 +859,11 @@ components:
     SourceRefV1:
       additionalProperties: false
       properties:
+        applicability:
+          anyOf:
+          - type: string
+          - type: 'null'
+          title: Applicability
         artifact_locator:
           anyOf:
           - additionalProperties: true
@@ -867,6 +884,11 @@ components:
             type: string
           title: Heading Path
           type: array
+        page_no:
+          anyOf:
+          - type: integer
+          - type: 'null'
+          title: Page No
         payload_kind:
           title: Payload Kind
           type: string
@@ -922,6 +944,8 @@ components:
       - title
       - unit_content_hash
       - quality_status
+      - applicability
+      - page_no
       - artifact_locator
       title: SourceRefV1
       type: object
